add single product styles

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1108,10 +1108,8 @@ white = #fff
 	&-image
 		background-size cover
 		background-position center center
-		// height 200px
-		height: 242px;
+		height: 250px;
 		display flex
-		margin-bottom 10px
 		img
 			margin auto
 	&-data
@@ -1168,6 +1166,7 @@ white = #fff
 		font-weight: normal;
 		color: #333333;
 		margin-bottom: 3px;
+		margin-top: 10px;
 		text-align center
 	&-subtitle
 		font-family: OpenSans !important;
