--- a/app/styles/buttons.styl
+++ b/app/styles/buttons.styl
@@ -80,7 +80,8 @@
 		font-weight 500
 
 .am-View-button
-	background #2e71f0
+	// background #2e71f0
+	background #4000ff
 	border-radius 17px
 	padding 8px 15px
 	letter-spacing 2px
@@ -96,3 +97,10 @@
 		max-width 200px
 	&.green
 		background #3bd64a
+	&.flat
+		border-radius 0
+		// display: block;
+		width 100%
+		text-align center
+		padding 12px
+		max-width 350px
