--- a/app/styles/single.styl
+++ b/app/styles/single.styl
@@ -1,58 +1,69 @@
 .singleProduct
 	&-name
-		font-family OpenSans !important
-		font-size 20px !important
-		line-height 1.01 !important
-		letter-spacing -0.2px !important
-	&-by
-		font-family OpenSans !important
-		font-size 14px !important
-		line-height 1.34 !important
-		a
-			text-decoration underline !important
-			color #666 !important
-	&-finalPrice
-		font-family DIN !important
-		font-size 20px !important
-		color #4000ff !important
-		font-weight 500 !important
-		margin-right 9%
-	&-price
-		font-family DIN !important
-		font-size 20px !important
-		text-decoration line-through !important
-	&-info
-		font-family OpenSans !important
-		color #666 !important
-		margin-top 10px
-		&-text
-			font-size 12px
-			margin-bottom 4px
-		&-icon
-			float left
-			margin-right 17px
-	&-btn
-		background #4000ff !important
-		border-radius 0 !important
-		padding 12px 9% !important
-		margin-bottom 10px
-	&-description
-		display flex
-		border-top 1px solid #ddd
 		font-family OpenSans
-		&-box
-			width 50%
-			padding 40px
-			font-size 14px
-			color #666
-			&-title
-				font-size 24px
-				margin-bottom 5px
-			&-space
-				margin-top 30px
-			a
-				text-decoration underline !important
-				color #666 !important
+		font-size 23px
+		color #393d3f
+	&-by
+		font-family OpenSans
+		font-size 16px
+		color #393d3f
+		a
+			text-decoration underline
+			color #333333
+	&-finalPrice
+		font-family DIN
+		font-size 23px
+		color #4000ff
+	&-price
+		font-family DIN
+		font-size 23px
+		text-decoration line-through
+		color #61565a
+	&-btn
+		display flex
+		justify-content: center;
+	&-text 
+		color #838c8e
+		font-family: OpenSans;
+		font-size 12px
+		display flex
+		align-items center
+		i
+			color #848d8f
+			margin-right 10px
+			font-size 15px
+	// &-info
+	// 	font-family OpenSans !important
+	// 	color #666 !important
+	// 	margin-top 10px
+	// 	&-text
+	// 		font-size 12px
+	// 		margin-bottom 4px
+	// 	&-icon
+	// 		float left
+	// 		margin-right 17px
+	// &-btn
+	// 	background #4000ff !important
+	// 	border-radius 0 !important
+	// 	padding 12px 9% !important
+	// 	margin-bottom 10px
+	// &-description
+	// 	display flex
+	// 	border-top 1px solid #ddd
+	// 	font-family OpenSans
+	// 	&-box
+	// 		width 50%
+	// 		padding 40px
+	// 		font-size 14px
+	// 		color #666
+	// 		&-title
+	// 			font-size 24px
+	// 			margin-bottom 5px
+	// 		&-space
+	// 			margin-top 30px
+	// 		a
+	// 			text-decoration underline !important
+	// 			color #666 !important
 	&-images
 		margin-right 20px
 		&-container
@@ -60,10 +71,10 @@
 			padding 5px
 			margin-bottom 8px
 			cursor zoom-in
-	&-icon
-		border-color #4000ff
-		background #4000ff
-		color #fff !important
+	// &-icon
+	// 	border-color #4000ff
+	// 	background #4000ff
+	// 	color #fff !important
 
 @media (max-width: 999px)
 	.singleProduct
@@ -75,9 +86,9 @@
 				margin-bottom 30px
 				margin-right 8px
 
-@media (max-width: 768px)
-		&-btn
-			padding: 12px 25% !important
-		&-description
-			&-box
-				padding 25px
+// @media (max-width: 768px)
+// 		&-btn
+// 			padding: 12px 25% !important
+// 		&-description
+// 			&-box
+// 				padding 25px
