--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -32,40 +32,43 @@
 				<div class="single-image">
 					<div class="singleProduct-images">
 						<div class="singleProduct-images-container">
-							<img src="{{product.photo|addFilter('w_120,h_120,q_80,c_scale')}}" class="work-photo" id="productS-image" data-img="{{product.photo|addFilter('w_700,h_800,q_80,c_limit')}}">
+							<!-- <img src="{{product.photo|addFilter('w_120,h_120,q_80,c_scale')}}" class="work-photo" id="productS-image" data-img="{{product.photo|addFilter('w_700,h_800,q_80,c_limit')}}"> -->
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_limit/v1461609097/iqttbjv41nm9x7wonhps.jpg" data-img="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,c_limit/v1461609097/iqttbjv41nm9x7wonhps.jpg">
 						</div>
 						<div class="singleProduct-images-container">
-							<img src="{{work.photo|addFilter('w_120,h_120,q_80,c_scale')}}" class="work-photo" id="work-image" data-img="{{work.photo|addFilter('w_700,h_800,q_80,c_limit')}}">
+							<!-- <img src="{{work.photo|addFilter('w_120,h_120,q_80,c_scale')}}" class="work-photo" id="work-image" data-img="{{work.photo|addFilter('w_700,h_800,q_80,c_limit')}}"> -->
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_limit/v1461608610/d9qlr95thheot0hwyzzd.jpg" data-img="http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_limit/v1461608610/d9qlr95thheot0hwyzzd.jpg">
 						</div>
 					</div>
 					<div class="single-image-inner">
 						<div class="work-photo-container">
-							<img src="{{product.photo|addFilter('w_700,h_800,q_80,c_limit')}}" class="work-photo" id="product-image">
+							<!-- <img src="{{product.photo|addFilter('w_700,h_800,q_80,c_limit')}}" class="work-photo" id="product-image"> -->
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_700,c_limit/v1461609097/iqttbjv41nm9x7wonhps.jpg" id="product-image">
 						</div>
-							<div class="actions u-padding-top-10">
-								<a class="action {% if product.liked %} active {% endif %}">
-									<div class="like-btn">
-										<i class="icon bi_ecommerce-diamon  valuation"></i>
-										<p class="text">VALORAR</p>
-									</div>
+						<div class="actions u-padding-top-10">
+							<a class="action {% if product.liked %} active {% endif %}">
+								<div class="like-btn">
+									<i class="icon bi_ecommerce-diamon  valuation"></i>
+									<p class="text">VALORAR</p>
+								</div>
+							</a>
+							<a id="go-share-modal" href="#share-modal" class="action">
+								<i class="icon bi_web-share share"></i>
+								<p class="text">COMPARTIR</p>
+							</a>
+							<a href="/user/{{product.User.username}}/product/{{product.nameSlugify}}/buy" class="action buy-product">
+								<i class="icon bi_ecommerce-shopcart-a singleProduct-icon"></i>
+								<p class="text">COMPRAR</p>
+							</a>
+							<!-- {#
+							{% if owner || (user && user.isAdmin)%}
+								<a id="go-share-modal" href="/user/{{product.User.username}}/product/{{product.nameSlugify}}/edit" class="action">
+									<i class="icon bi_editorial-compose"></i>
+									<p class="text">EDITAR</p>
 								</a>
-								<a id="go-share-modal" href="#share-modal" class="action">
-									<i class="icon bi_web-share share"></i>
-									<p class="text">COMPARTIR</p>
-								</a>
-								<a href="/user/{{product.User.username}}/product/{{product.nameSlugify}}/buy" class="action buy-product">
-									<i class="icon bi_ecommerce-shopcart-a singleProduct-icon"></i>
-									<p class="text">COMPRAR</p>
-								</a>
-								<!-- {#
-								{% if owner || (user && user.isAdmin)%}
-									<a id="go-share-modal" href="/user/{{product.User.username}}/product/{{product.nameSlugify}}/edit" class="action">
-										<i class="icon bi_editorial-compose"></i>
-										<p class="text">EDITAR</p>
-									</a>
-								{% endif %}
-								#} -->
-							</div>
+							{% endif %}
+							#} -->
+						</div>
 						<div class="actions-box after-like {% if !product.liked %} hide {% endif %}">
 
 							<i class="bi_interface-top arrow" {% if owner %} style="left: 32px;" {% endif %}></i>
@@ -90,33 +93,59 @@
 						<div class="u-margin-top-10">&nbsp;</div>
 					</div>
 				</div>
-				<div class="single-data u-padding-bottom-40">
-					<div class="FollowArtist u-padding-bottom-10">
-						<div style="width: 100%;">
-							<p class="u-padding-bottom-7 singleProduct-name">
-								{{product.Category.ParentCategory.name}}
-								{{product.Category.name}} 
-							</p>
-							<p class="u-padding-bottom-7 singleProduct-name">
-								{{product.name}} 
-							</p>
-							 
-							<p class="u-padding-bottom-7 singleProduct-by">
-								por <a href="/user/{{product.User.username}}/products">
-									{% if product.User.typeName === 1 %}
-										{{product.User.fullname}}
-									{% else %}
-										{{product.User.pseudonimo}}
-									{% endif %}
-								</a>
-							</p>
-							<p class="u-padding-bottom-7">
-								<span class="singleProduct-finalPrice">S/.{{product.finalPrice}}.00</span>
-								<span class="singleProduct-price">S/.{{product.price}}.00</span>
-							</p>
-						</div>
+				<div class="single-data">
+
+					<p class="u-padding-bottom-7 singleProduct-name">
+						Producto iPhone Case
+						<!-- {{product.Category.ParentCategory.name}}
+						{{product.Category.name}}
+						{{product.name}} -->
+					</p>
+
+					<p class="u-padding-bottom-20 singleProduct-by">
+						por&nbsp;&nbsp;<a href="/user/{{product.User.username}}/products">
+							<!-- {% if product.User.typeName === 1 %}
+								{{product.User.fullname}}
+							{% else %}
+								{{product.User.pseudonimo}}
+							{% endif %} -->
+							Andre Coronado
+						</a>
+					</p>
+
+					<p class="u-padding-bottom-30">
+						<span class="singleProduct-finalPrice">
+							S/.425.00
+							<!-- S/.{{product.finalPrice}}.00 -->
+						</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<span class="singleProduct-price">
+							S/.245.00
+							<!-- S/.{{product.price}}.00 -->
+						</span>
+					</p>
+
+
+					<p class="singleProduct-text u-padding-bottom-7">
+						<i class="bi_editorial-brush"></i>
+						<span>Cuando compras acá, compras a un artista</span>
+					</p>
+
+					<p class="singleProduct-text u-padding-bottom-20">
+						<i class="bi_transport-truck"></i>
+						<span>Entrega en la puerta de tu casa</span>
+					</p>
+
+					<!-- <a href="/user/{{product.User.username}}/product/{{product.nameSlugify}}/buy" class="buy-product am-View-button singleProduct-btn expand u-margin-top-20">COMPRAR</a> -->
+					<div class="singleProduct-btn u-padding-bottom-7">
+						<a href="/user/{{product.User.username}}/product/{{product.nameSlugify}}/buy" class="am-View-button flat">COMPRAR</a>
 					</div>
-					<div class="singleProduct-dropdown">
+
+					<p class="singleProduct-text">
+						<i class="bi_com-chat"></i>
+						<span>7 días para devolver cualquier obra/producto</span>
+					</p>
+
+					<!-- <div class="singleProduct-dropdown">
 						<select class="input select" name='model'>
 							{% for productCategory in categories %}
 								{% if productCategory.CategoryId == product.CategoryId %}
@@ -128,8 +157,9 @@
 								{%endif%}
 							{% endfor %}
 						</select>
-					</div>
-					<div class="info-single singleProduct-info">
+					</div> -->
+
+					<!-- <div class="info-single singleProduct-info">
 						<i class="bi_editorial-brush singleProduct-info-icon"></i>
 						<p class="u-padding-bottom-7 singleProduct-info-text">Cuando compras acá, compras a un artista</p>
 						<i class="bi_transport-truck singleProduct-info-icon"></i>
@@ -139,8 +169,9 @@
 						</div>
 						<i class="bi_com-chat singleProduct-info-icon"></i>
 						<p class="u-padding-bottom-7 singleProduct-info-text">7 días para devolver cualquier obra/producto</p>
-					</div>
-					<p class="am-stats-text u-margin-top-40">ESTADÍSTICAS</p>
+					</div> -->
+
+					<!-- <p class="am-stats-text u-margin-top-40">ESTADÍSTICAS</p>
 					<div class="u-separator"></div>
 					<div class="u-center">
 						<table class="am-Single-stats u-margin-top-10">
@@ -155,7 +186,8 @@
 						    <td><span class="likes">{{product.likes || 0}}</span></td>
 						  </tr>
 						</table>
-					</div>
+					</div> -->
+
 				</div>
 			</div>
 		</div>
