--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2205,7 +2205,8 @@ white = #fff
 	font-size: 18px;
 	text-align: center;
 	max-width 500px
-	margin auto
+	margin-left auto
+	margin-right auto
 	cursor pointer
 	a
 		font-size: 16px;
