--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -89,7 +89,7 @@
 							<p>{{numbers[0]}}</p>
 						</div>
 						
-						{% if numbers[1] != 0 %}
+						{% if numbers[1] == -1 %}
 							<div class="am-Profile-menu-item products" data-name='products'>
 								<p>TIENDA</p>
 								<p>{{numbers[1]}}</p>
