--- a/app/views/user/product/buy.html
+++ b/app/views/user/product/buy.html
@@ -113,7 +113,7 @@
 									  <input name="shippingCountry" type="hidden" value="PE">
 									  <input name="billingCountry" type="hidden" value="PE">
 									  <input name="zipCode" type="hidden" value="{{user.zipcode}}">
-									  <input name="confirmationUrl" type="hidden" value="">
+									  <input name="confirmationUrl" type="hidden" value="{{payu.confirmation}}">
 									  <input class="btn-pay" type="image" src="http://www.payulatam.com/img-secure-2015/boton_pagar_pequeno.png" border="0">
 									</form>
 								</div>
