ecommerce fixes progress

--- a/app/styles/filters.styl
+++ b/app/styles/filters.styl
@@ -24,7 +24,7 @@ l/*------------------------------------*
 	border-radius 4px
 	&-item
 		&.selected
-			background #eee
+			background #ddd
 		&:not(:first-child)
 			border-top solid 1px #ddd
 		&.closed
