--- a/app/views/user/product/buy.html
+++ b/app/views/user/product/buy.html
@@ -21,11 +21,11 @@
 											<div class="grid-container grid-parent" style="width: 100%;">
 												<div class="grid-50">
 													<p class="address-label">Nombres</p>
-													<input class="address-input" placeholder="Ingresa tu Nombre" value={{user.firstname}} name="firstname">
+													<input class="address-input" placeholder="Ingresa tu Nombre" value="{{user.firstname}}" name="firstname">
 												</div>
 												<div class="grid-50">
 													<p class="address-label">Apellidos</p>
-													<input class="address-input" placeholder="Tus apellidos" value={{user.lastname}} name="lastname">
+													<input class="address-input" placeholder="Tus apellidos" value="{{user.lastname}}" name="lastname">
 												</div>
 												<div class="grid-66">
 													<p class="address-label">Dirección de Envío</p>
