--- a/app/views/partials/account-menu.html
+++ b/app/views/partials/account-menu.html
@@ -8,13 +8,13 @@
 						<ul class="am-Filter-subOptions">
 							<a href="/user/{{user.username}}/account/" class="profile">Mis datos de perfil</a>
 							<!-- <a href="/user/{{user.username}}/account/configuration/" class="configuration">Configuración</a> -->
-							<!-- <a href="/user/{{user.username}}/account/orders" class="orders">Mis compras</a> -->
+							<a href="/user/{{user.username}}/account/orders" class="orders">Mis compras</a>
 							<!-- <a href="#" class="directions">Mis direcciones de envío</a> -->
 							<a href="/user/{{user.username}}/account/password" class="password">Cambiar contraseña</a>
 						</ul>
 					</div>
-					<!--
-					{% if user.country === 'Peru'%}
+					
+					<!-- {% if user.country === 'Peru'%}
 						<div class="am-Filter-item">
 							<header class="am-Filter-header">
 								<i class="bi_user-single-a"></i><p>Tienda en línea</p>
@@ -30,6 +30,6 @@
 								{%endif%}
 							</ul>
 						</div>
-					{% endif %}
-					 -->
+					{% endif %} -->
+					 
 				</div>
