--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -67,10 +67,10 @@
 
 
 				      {% if user && user.isAdmin %}
-				        <div class="featured {% if  !profile.featured %} disabled {% endif %}">DESTACADO</div>
+				        <div class="featured amf {% if  !profile.featured %} disabled {% endif %}">DESTACADO</div>
 				        {% else %}
 				        {% if profile.featured %}
-				          <div class="featured">DESTACADO</div>
+				          <div class="featured amf">DESTACADO</div>
 				        {% endif %}
 				      {% endif %}
 					</div>
@@ -89,7 +89,7 @@
 							<p>{{numbers[0]}}</p>
 						</div>
 						
-						{% if numbers[1] == -1 %}
+						{% if numbers[1] != 0 %}
 							<div class="am-Profile-menu-item products" data-name='products'>
 								<p>TIENDA</p>
 								<p>{{numbers[1]}}</p>
