--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -32,11 +32,12 @@
 				              {% if user %}
 				                <a href="/feed" class="feed-menu">INICIO<span></span></a>
 				              {% endif %}
-				              	<a href="/tv" class="tv-menu">TV<span></span></a>
+				              	<a href="/products/category/all/page-1/?order=newest&featured=1" class="market-menu">MARKET<span></span></a>
 								<a class="works-menu js-menu-discover">DESCUBRE<span></span></a>
 								<!-- <a href="/works/category/all/page-1/?order=newest&featured=1" class="works-menu">OBRAS<span></span></a> -->
 								<!-- <a href="/products/category/all/page-1" class="market-menu">TIENDA<span></span></a> -->
-        				<a href="/blog" class="blog-menu">BLOG<span></span></a>
+        						<a href="/blog" class="blog-menu">BLOG<span></span></a>
+        						<a href="/tv" class="tv-menu">TV<span></span></a>
 							</ul>
 						{% if user %}
 							<ul class="socials">
