ecommerce fixes progress 3

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -12,6 +12,11 @@ body
 @import 'amlab.styl'
 
 /*------------------------------------*
+	$ FEATURED
+*------------------------------------*/
+@import 'featured.styl'
+
+/*------------------------------------*
 	$ SINGLE REDONE
 *------------------------------------*/
 @import 'single.styl'
@@ -632,7 +637,7 @@ white = #fff
 		letter-spacing 1px
 		a
 			color charcoal-grey
-			margin-left 25px
+			margin-left 20px
 			position relative
 			span
 				display none
