--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -21,12 +21,12 @@
 					</div>
 					<div class="left-menu u-padding-top-10">
 						<div class="am-Filter filter-category">
-							<div class="am-Filter-item">
+							<!-- <div class="am-Filter-item">
 								<header class="am-Filter-header">
 									<i class="fa fa-bars"></i><p>Ver sólo</p>
 								</header>
-							</div>
-							<div class="am-Filter-item">
+							</div> -->
+							<!-- <div class="am-Filter-item">
 								<div class="am-Filter-switch">
 
 									<input type="checkbox" name="AM" id="AM"/>
@@ -37,7 +37,7 @@
 									</label>
 									<span>Productos destacados</span>
 								</div>
-							</div>
+							</div> -->
 							<div class="am-Filter-item">
 								<header class="am-Filter-header">
 									<i class="fa fa-bars"></i><p>Categorías</p>
@@ -62,10 +62,10 @@
 					</div>
 				</div>
 				<div class="text navigation" style="text-align: center;">
-					<span class="am-navigation-text uppercase category-text" id="category"></span>
+					<!-- <span class="am-navigation-text uppercase category-text" id="category"></span>
 					<span class="am-navigation-text uppercase order-text" id="order"></span>
 					<span class="am-navigation-text uppercase search-text hide" id="term"></span>
-					<span class="am-navigation-text uppercase featured-text hide" id="featured"></span>
+					<span class="am-navigation-text uppercase featured-text hide" id="featured"></span> -->
 				</div>
 				<div class="filter right" data-state="closed">
 					<div class="am-Select">
