--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -206,7 +206,7 @@
 						</div>
 						<div class="left-menu u-padding-top-10">
 							<div class="am-Filter filter-category">
-								<div class="am-Filter-item">
+<!-- 								<div class="am-Filter-item">
 									<header class="am-Filter-header">
 										<i class="fa fa-bars"></i><p>Ver sólo</p>
 									</header>
@@ -221,7 +221,7 @@
 										</label>
 										<span>Obras destacadas</span>
 									</div>
-								</div>
+								</div> -->
 								<div class="am-Filter-item">
 									<header class="am-Filter-header">
 										<i class="fa fa-bars"></i><p>Categorías</p>
@@ -231,10 +231,10 @@
 						</div>
 					</div>
 					<div class="text navigation" style="text-align: center;">
-						<span class="am-navigation-text uppercase category-text" id="category"></span>
+<!-- 						<span class="am-navigation-text uppercase category-text" id="category"></span>
 						<span class="am-navigation-text uppercase order-text" id="order"></span>
 						<span class="am-navigation-text uppercase search-text hide" id="term"></span>
-						<span class="am-navigation-text uppercase featured-text hide" id="featured"></span>
+						<span class="am-navigation-text uppercase featured-text hide" id="featured"></span> -->
 					</div>
 					<div class="filter right" data-state="closed">
 						<div class="am-Select">
