--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -2,7 +2,7 @@
 {% set pageTitle = 'Descubre Productos' %}
 {% set path = 'collections' %}
 {% set bannerTitle = 'Descubre Productos' %}
-{% set bannerImg = 'discover-banner-artists.jpg' %}
+{% set bannerImg = 'Banner-descubre-productos_2_lad2sx.jpg' %}
 
 {% extends '../partials/base.html' %}
 
