--- a/app/styles/featured.styl
+++ b/app/styles/featured.styl
@@ -6,6 +6,10 @@
 		display flex
 		flex-wrap wrap
 		justify-content center
+	&-border
+		img
+			border 1px solid #ddd
+			box-sizing border-box
 	&-w580
 		flex 1
 		border 10px solid white
@@ -13,14 +17,24 @@
 		img
 			width 100%
 			height 100%
+		a
+			display block
+			transition 0.2s
+		a:hover
+			filter brightness(80%)
 	&-w280
 		flex 1
 		border 10px solid white
 		img
 			width 100%
 			height 100%
+		a
+			display block
+			transition 0.2s
+		a:hover
+			filter brightness(80%)
 	&-c580
 		flex 1
 		display flex
-		min-width 350px
+		min-width 370px
 		justify-content space-between
