--- a/app/views/pages/featured.html
+++ b/app/views/pages/featured.html
@@ -8,58 +8,84 @@
 			<div class="featured-flex">
 				<div class="featured-c580">
 					<div class="featured-w580">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_580,h_580,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
+						<a href="/products/category/all/page-1/?order=newest&featured=1">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/Banner-principal_hz3vur.jpg">
+						</a>
 					</div>
 				</div>
 				<div class="featured-c580">
 					<div class="featured-w280">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_280,h_580,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
+						<a href="/user/cristhianhova/">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/Hova-tienda_cdsqff">
+						</a>
 					</div>
 					<div class="featured-w280">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_280,h_580,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
+						<a href="#">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/Grolsch-tienda_s7dshb">
+						</a>
 					</div>
 				</div>
 			</div>
 			<div class="featured-flex">
 				<div class="featured-c580">
-					<div class="featured-w280">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_280,h_280,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
+					<div class="featured-w280 featured-border">
+						<a href="/products/category/iphone-case/page-1/?order=newest&featured=1">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/iphone-cases_kvoptr.jpg">
+						</a>
 					</div>
-					<div class="featured-w280">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_280,h_280,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
+					<div class="featured-w280 featured-border">
+						<a href="/products/category/galaxy-case/page-1/?order=newest&featured=1">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/galaxy-cases_qroa3a.jpg">
+						</a>
 					</div>
 				</div>
 				<div class="featured-c580">
-					<div class="featured-w280">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_280,h_280,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
+					<div class="featured-w280 featured-border">
+						<a href="/products/category/taza/page-1/?order=newest&featured=1">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/tazas-mug_czzzfx.jpg">
+						</a>
 					</div>
-					<div class="featured-w280">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_280,h_280,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
+					<div class="featured-w280 featured-border">
+						<a href="/products/category/print/page-1/?order=newest&featured=1">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/productos-categorias-prints_edijjg">
+						</a>
 					</div>
 				</div>
 			</div>
 			<div class="featured-flex">
 				<div class="featured-w580">
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_580,h_580,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
+					<a href="/works/category/all/page-1/?order=newest&featured=1">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255848/featured/descubre-obras_og6zir.jpg">
+					</a>
 				</div>
 				<div class="featured-w580">
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_580,h_580,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
-				</div>
-			</div>
-			<div class="featured-flex">
-				<div class="featured-w580">
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_580,h_280,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
-				</div>
-				<div class="featured-w580">
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_580,h_280,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
+					<a href="/user/sipion/">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/artista-destacado_sajfxk.jpg">
+					</a>
 				</div>
 			</div>
 			<div class="featured-flex">
 				<div class="featured-w580">
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_580,h_280,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
+					<a href="/compra-y-vende-arte-en-internet-latinoamerica">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/landing-artistas_fwlifo">
+					</a>
 				</div>
 				<div class="featured-w580">
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_580,h_280,c_scale/v1461608610/d9qlr95thheot0hwyzzd.jpg">
+					<a href="/blog">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/BLOG_snjk5p.jpg">
+					</a>
+				</div>
+			</div>
+			<div class="featured-flex">
+				<div class="featured-w580">
+					<a href="/tv">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/AM-TV_qswkkr.jpg">
+					</a>
+				</div>
+				<div class="featured-w580">
+					<a href="/users/specialty/all/page-1/?order=newest&featured=1">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/DESCUBRE-ARTISTAS_fvtess.jpg">
+					</a>
 				</div>
 			</div>
 		</div>
