--- a/app/views/pages/featured.html
+++ b/app/views/pages/featured.html
@@ -15,12 +15,12 @@
 				</div>
 				<div class="featured-c580">
 					<div class="featured-w280">
-						<a href="/user/cristhianhova/">
+						<a href="/user/cristhianhova/products/all/page-1/?order=price_asc&featured=1">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/Hova-tienda_cdsqff">
 						</a>
 					</div>
 					<div class="featured-w280">
-						<a href="#">
+						<a href="/user/GrolschPeru/">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/Grolsch-tienda_s7dshb">
 						</a>
 					</div>
